--- a/package.json
+++ b/package.json
@@ -44,17 +44,15 @@
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "start:debug": "node --inspect-brk=5858 ./src/index.tsx",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepare": "husky install",
-    "lint": "eslint --ext .ts --ext .tsx src --fix",
-    "lint:watch": "esw --ext .ts --ext .tsx src --fix"
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
+    "eject": "DISABLE_ESLINT_PLUGIN=true react-scripts eject",
+    "prepare": "DISABLE_ESLINT_PLUGIN=true husky install",
+    "lint": "DISABLE_ESLINT_PLUGIN=true eslint --ext .ts --ext .tsx src --fix",
+    "lint:watch": "DISABLE_ESLINT_PLUGIN=true esw --ext .ts --ext .tsx src --fix"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
     ]
   },
   "browserslist": {
