--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
     "@types/recharts": "^2.0.0",
     "aws-sdk": "^2.859.0",
     "axios": "^0.21.1",
@@ -45,14 +45,17 @@
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "start:debug": "node --inspect-brk=5858 ./src/index.tsx",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
-    "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
-    "eject": "DISABLE_ESLINT_PLUGIN=true react-scripts eject",
-    "prepare": "DISABLE_ESLINT_PLUGIN=true husky install",
-    "lint": "DISABLE_ESLINT_PLUGIN=true eslint --ext .ts --ext .tsx src --fix",
-    "lint:watch": "DISABLE_ESLINT_PLUGIN=true esw --ext .ts --ext .tsx src --fix"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    "lint": "eslint --ext .ts --ext .tsx src --fix",
+    "lint:watch": "esw --ext .ts --ext .tsx src --fix"
   },
   "eslintConfig": {
-    "extends": []
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -69,7 +72,7 @@
   "devDependencies": {
     "@types/react-js-pagination": "^3.0.3",
     "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
