--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
     "recharts": "^2.0.9",
     "redux": "^4.1.0",
     "typescript": "^4.1.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@types/react-js-pagination": "^3.0.3",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "react-app-env": "^1.2.3"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
@@ -69,11 +75,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-js-pagination": "^3.0.3",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -83,7 +84,6 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-watch": "^7.0.0",
-    "husky": "^6.0.0",
-    "react-app-env": "^1.2.3"
+    "husky": "^6.0.0"
   }
 }
